Unit tests for all TrackController methods added